added dropdown menu

--- a/foods/index.html
+++ b/foods/index.html
@@ -23,7 +23,16 @@
                 <div class="logo1">
                     <img src="./pics/logo-image.png" width="110px" height="20px">
                 </div>
-                <div class="list"><a href=""><img src="./pics/list.png" width="25px" height="25px"></a></div>
+                <!-- <div class="list"><a href=""><img src="./pics/list.png" width="25px" height="25px"></a></div> -->
+                <div class="list">
+                  <button style="background-color:  lightseagreen;"><img src="./pics/list.png" width="25px" height="25px"></button>
+                  <div class="content">
+                    <a href="#">Fruits Salads</a>
+                    <a href="#">Vegetable Salads</a>
+                    <a href="#">Nutrition Pack</a>
+                  </div>
+                </div>
+
                 <div class="cart">
                     <a href="">
                         <img src="./pics/add-to-cart.png" width="25px" height="25px"></a>
