added styles to the form

--- a/foods/index.html
+++ b/foods/index.html
@@ -16,32 +16,38 @@
 <div class="layout">
 
     <body>
-<!-- Nav bar -->
+        <!-- Nav bar -->
         <div class="header">
             <div class="top">
 
                 <div class="logo1">
                     <img src="./pics/logo-image.png" width="110px" height="20px">
                 </div>
-                <!-- <div class="list"><a href=""><img src="./pics/list.png" width="25px" height="25px"></a></div> -->
-                <div class="list">
-                  <button style="background-color:  lightseagreen;"><img src="./pics/list.png" width="25px" height="25px"></button>
-                  <div class="content">
-                    <a href="#">Fruits Salads</a>
-                    <a href="#">Vegetable Salads</a>
-                    <a href="#">Nutrition Pack</a>
-                  </div>
-                </div>
-
-                <div class="cart">
-                    <a href="">
-                        <img src="./pics/add-to-cart.png" width="25px" height="25px"></a>
-                </div>
-                <div class="book">
-                    <div><a href="AppointmentForm.html"> An Appointment </a> </div>
-                </div>
+                <ul>
+                    <li>
+                        <div class="list">
+                            <button style="background-color:  lightseagreen;"><img src="./pics/list.png" width="25px"
+                                    height="25px"></button>
+                            <div class="content">
+                                <a href="#">Fruits Salads</a>
+                                <a href="#">Vegetable Salads</a>
+                                <a href="#">Nutrition Pack</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="cart">
+                            <a href="">
+                                <img src="./pics/add-to-cart.png" width="25px" height="25px"></a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="book">
+                            <a href="AppointmentForm.html"> An Appointment </a>
+                        </div>
+                    </li>
             </div>
-
+            </ul>
             <div class="shop">
                 <h2> NUTRITION SHOP</h2>
                 <P><b>Every bite is a choice—fuel your body, feed your future.</b></P>
@@ -57,7 +63,7 @@
                 </select>
             </div>
         </div>
-<!-- our food menu -->
+        <!-- our food menu -->
         <div class="showcase1">
             <div class="img1">
                 <img src="./pics/001.jpg" width="300px" height="380px">
@@ -106,7 +112,7 @@
 
             </div>
         </div>
-<!-- our publishes -->
+        <!-- our publishes -->
         <div class="showcase2">
             <div class="subscribe">
 
@@ -133,7 +139,7 @@
                 </div>
             </div>
         </div>
-<!-- footer -->
+        <!-- footer -->
         <div class="showcase2">
             <div class="register">
                 <div class="box0">
