--- a/foods/AppointmentForm.html
+++ b/foods/AppointmentForm.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appointment_Form</title>
     <style href="./CSS_Style/Appointment.css" rel="stylesheet"></style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
+
 <body>
-    <form>
-        <label>Full Name</label>
-        <input type="text" placeholder="Enter your name">
-         <label>Age</label>
-        <input type="number" placeholder="Enter your age">
-         <label>Gender</label>
-        <input type="text" placeholder="Enter your gender">
-         <label>Email</label>
-        <input type="email" placeholder="Enter your Email">
-         <label>Contact Number</label>
-        <input type="number" placeholder="Enter your contact number">
-    </form>
-    
+    <h2 class="text-center">Appointment Form</h2>
+    <div class="row text-center">
+            <label class="col">Full Name</label>
+            <input type="text" placeholder="Enter your name">
+            <label class="col">Age</label>
+            <input type="number" placeholder="Enter your age">
+            <label class="col">Gender</label>
+            <input type="text" placeholder="Enter your gender">
+            <label class="col">Email</label>
+            <input type="email" placeholder="Enter your Email">
+            <label class="col">Contact Number</label>
+            <input type="number" placeholder="Enter your contact number">
+       
+    </div>
 </body>
+
 </html>
